syntax = "proto3";
option csharp_namespace = "SimpleSchedulerBlazor.ProtocolBuffers.Messages.Login";
package SimpleSchedulerBlazorProtocolBuffers;

message GetAllUserEmailsRequest {
}
message GetAllUserEmailsReply {
    repeated string EmailAddresses = 1;
}

message IsLoggedInRequest {
}
message IsLoggedInReply {
    bool IsLoggedIn = 1;
}

message SubmitEmailRequest {
    string EmailAddress = 1;
}
message SubmitEmailReply {
}

message ValidateEmailRequest {
    string ValidationCode = 1;
}
message ValidateEmailReply {
    string JwtToken = 1;
}
